--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,17 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-    <div ng-view></div>
-
+    <div class="container">
+      <div ng-include="'components/navbar/navbar.html'"></div>
+      <div class="header">
+          <h1>Countries & Capitals</h1>
+      </div>
+      <div ng-view></div>
+      <hr>
+      <div class="footer">
+        <p>With ♥ from <a href="https://twitter.com/Swiip">@Swiip</a></p>
+      </div>
+    </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -52,6 +60,7 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
+    <script src="geonames.service.js"></script>
 
   </body>
 </html>
